[package]
name = "rupdateproxy"
version = "0.1.0"
authors = ["Tom Pusateri <pusateri@bangj.com>"]
homepage = "https://github.com/pusateri/rupdateproxy"
edition = "2018"

[dependencies]
tokio = "^0.1"
tokio-codec = "*"
tokio-timer = "*"
lazy_static = "^1.0"
bytes = "^0.4"
socket2 = { version = "0.3.7", features = ["reuseport"] }
domain-core = { git = "https://github.com/NLnetLabs/domain-core.git" }
domain-resolv = { git = "https://github.com/NLnetLabs/domain-core.git" }
nix = { git = "https://github.com/pusateri/nix.git" }
crossbeam-channel = "0.3"
interface-events = { git = "https://github.com/pusateri/interface-events.git" }
hostname ="*"
treebitmap = { git = "https://github.com/zesplot/treebitmap.git", branch = "longest_match_mut" }
jsonpath = "*"
json-patch = "*"
shrust = "*"
argparse = "0.2.2"
daemonize = "0.3.0"

[build-dependencies]
git-version = "*"
