[package]
name = "rupdateproxy"
version = "0.1.0"
authors = ["Tom Pusateri <pusateri@bangj.com>"]
homepage = "https://github.com/pusateri/rupdateproxy"
edition = "2018"

[dependencies]
futures = "^0.1"
tokio = "^0.1"
tokio-codec = "^0.1"
tokio-timer = "^0.2"
lazy_static = "^1.0"
bytes = "^0.4"
socket2 = { version = "0.3.7", features = ["reuseport"] }
domain-core = { git = "https://github.com/NLnetLabs/domain-core.git" }
domain-resolv = { git = "https://github.com/NLnetLabs/domain-core.git" }
nix = { git = "https://github.com/pusateri/nix.git" }
interface-events = { git = "https://github.com/pusateri/interface-events.git" }
hostname ="^0.1"
treebitmap = "^0.3"
argparse = "^0.2"
daemonize = "^0.3"

[build-dependencies]
git-version = "^0.2"
